--- a/Python3专题笔记/创建单例.md
+++ b/Python3专题笔记/创建单例.md
@@ -35,3 +35,56 @@ print(a)
 bar = Spam()
 print(b)
 ```
+
+但是在PySide（或QT）中想要使用单例，会有些不同
+================================================================================
+
+_python2_
+```python
+from PySide2.QtWidgets import *
+from PySide2.QtCore import *
+from PySide2.QtGui import *
+
+class Singleton(type):
+    def __init__(self, *args, **kwargs):
+        super(Singleton, self).__init__(*args, **kwargs)
+        self.__instance = None
+    def __call__(self, *args, **kwargs):
+        if not self.__instance:
+            self.__instance = super(Singleton, self).__call__(*args, **kwargs)
+        return self.__instance
+
+class QtSingleton(type(QObject), Singleton):
+    ...
+
+class MyClass(QWidget):
+	
+    __metaclass__ = QtSingleton
+	
+    def __init__(self):
+        print("MyClass singleton created")
+```
+
+_python3_
+```python
+from PySide2.QtWidgets import *
+from PySide2.QtCore import *
+from PySide2.QtGui import *
+
+class Singleton(type):
+    def __init__(self, *args, **kwargs):
+        super().__init__(*args, **kwargs)
+        self.__instance = None
+    def __call__(self, *args, **kwargs):
+        if not self.__instance:
+            self.__instance = super().__call__(*args, **kwargs)
+        return self.__instance
+
+class QtSingleton(type(QObject), Singleton):
+    ...
+
+class MyClass(QWidget, metaclass=QtSingleton):
+
+    def __init__(self):
+        print("MyClass singleton created")
+```
