--- a/Python3专题笔记/创建单例.md
+++ b/Python3专题笔记/创建单例.md
@@ -54,8 +54,7 @@ class Singleton(type):
             self.__instance = super(Singleton, self).__call__(*args, **kwargs)
         return self.__instance
 
-class QtSingleton(type(QObject), Singleton):
-    ...
+class QtSingleton(type(QObject), Singleton):pass
 
 class MyClass(QWidget):
 	
@@ -80,8 +79,7 @@ class Singleton(type):
             self.__instance = super().__call__(*args, **kwargs)
         return self.__instance
 
-class QtSingleton(type(QObject), Singleton):
-    ...
+class QtSingleton(type(QObject), Singleton):...
 
 class MyClass(QWidget, metaclass=QtSingleton):
 
