--- a/Python3专题笔记/创建单例.md
+++ b/Python3专题笔记/创建单例.md
@@ -39,6 +39,10 @@ print(b)
 但是在PySide（或QT）中想要使用单例，会有些不同
 ================================================================================
 
+直接让一个继承自QWidget使用Singleton会产生元类冲突，因为QWidget的元类是Shiboken.ObjectType，但是Singleton的元类是Type。
+
+为了解决冲突，需要产生一个新的元类，这个元类同时继承自Shiboken.ObjectType和Singleton，然后就可以应用于QWidget作为合法的元类了。
+
 _python2_
 ```python
 from PySide2.QtWidgets import *
