--- a/Python3专题笔记/创建单例.md
+++ b/Python3专题笔记/创建单例.md
@@ -92,3 +92,34 @@ class MyClass(QWidget, metaclass=QtSingleton):
     def __init__(self):
         print("MyClass singleton created")
 ```
+
+创建单例还可以使用装饰器实现
+================================================================================
+
+```python
+import abc
+
+def Singleton(cls):
+    instance = None
+    def wrap(*args, **kwargs):
+        nonlocal instance
+        if instance is None:
+            instance = cls(*args, **kwargs)
+        return instance
+    return wrap
+
+@Singleton
+class Spam:
+
+    def __init__(self, name, age):
+        self.name = name
+        self.age = age
+
+    def __repr__(self):
+        return f"<Spam {self.name} {self.age}>"
+
+foo = Spam("Foo", 28)
+print(foo)
+bar = Spam()
+print(bar)
+```
