--- a/Python3专题笔记/创建单例.md
+++ b/Python3专题笔记/创建单例.md
@@ -1,4 +1,7 @@
-创建单例可以使用元类来是实现
+创建单例
+================================================================================
+
+可以使用元类来是实现
 ================================================================================
 
 先明确一个概念：所有的元类都继承自 `type` ，所有的普通类都是元类的实例。
