--- a/Python3专题笔记/创建单例.md
+++ b/Python3专题笔记/创建单例.md
@@ -1,6 +1,8 @@
 创建单例
 ================================================================================
 
+__测试版本__：Python3.10.8
+
 可以使用元类来是实现
 ================================================================================
 
