--- a/Python3专题笔记/创建单例.md
+++ b/Python3专题笔记/创建单例.md
@@ -3,8 +3,7 @@
 
 __测试版本__：Python3.10.8
 
-可以使用元类来是实现
-================================================================================
+### 可以使用元类来是实现
 
 先明确一个概念：所有的元类都继承自 `type` ，所有的普通类都是元类的实例。
 
@@ -41,8 +40,7 @@ bar = Spam()
 print(b)
 ```
 
-但是在PySide（或QT）中想要使用单例，会有些不同
-================================================================================
+### 但是在PySide（或QT）中想要使用单例，会有些不同
 
 直接让一个继承自 `QWidget` 使用 `Singleton` 会产生元类冲突，因为 `QWidget` 的元类是 `Shiboken.ObjectType` ，但是 `Singleton` 的元类是 `Type` 。为了解决冲突，需要产生一个新的元类，这个元类同时继承自 `Shiboken.ObjectType` 和 `Singleton` ，然后就可以应用于 `QWidget` 作为合法的元类了。
 
@@ -98,8 +96,7 @@ class MyClass(QWidget, metaclass=QtSingleton):
         print("MyClass singleton created")
 ```
 
-创建单例还可以使用装饰器实现
-================================================================================
+### 创建单例还可以使用装饰器实现
 
 使用装饰器实现的单例，可以拥有更低的耦合度，也不会遭遇元类冲突等诸多问题。
 
