--- a/Python3专题笔记/创建单例.md
+++ b/Python3专题笔记/创建单例.md
@@ -98,7 +98,7 @@ class MyClass(QWidget, metaclass=QtSingleton):
 
 ### 创建单例还可以使用装饰器实现
 
-使用装饰器实现的单例，可以拥有更低的耦合度，也不会遭遇元类冲突等诸多问题。
+使用装饰器实现的单例，可以拥有更低的耦合度，也不会遭遇元类冲突等诸多问题，但是会导致类的名称变成一个函数对象。
 
 ```python
 import abc
