--- a/Python3专题笔记/垃圾回收.md
+++ b/Python3专题笔记/垃圾回收.md
@@ -34,8 +34,8 @@ def timer(func, *args, **kwargs):
     return res
 
 gc.disable()
-timer(perfconsum, 10000)
+timer(perfconsum, 10000) # 0.39
 
 gc.enable()
-timer(perfconsum, 10000)
+timer(perfconsum, 10000) # 0.80
 ```
