--- a/Python3专题笔记/垃圾回收.md
+++ b/Python3专题笔记/垃圾回收.md
@@ -1,6 +1,10 @@
 垃圾回收
 ================================================================================
 
+__测试版本__：Python3.10.8
+
+--------------------------------------------------------------------------------
+
 Python中主要使用的内存回收方式是引用计数，这种方式性能好，实现简单。
 
 但是一旦遇到循环引用，那么两个相互引用的对象谁都无法到达计数归零的时候，此时会在特定时机触发GC（Garbage Collection）。或者主动触发GC `gc.collect()` 。
