--- a/Python3专题笔记/动态执行代码.md
+++ b/Python3专题笔记/动态执行代码.md
@@ -8,27 +8,23 @@ Python代码只是字符串，对于已经写入到py文件中的代码，在读
 
 Python可以使用内置函数 `eval` 和 `exec` 来动态执行代码片段。
 
-* __eval__
+* __eval__ 用于执行表达式，并返回值。
 
-	__eval__ 用于执行表达式，并返回值。
+  ```python
+  eval("1 + 2") # 3
+  ```
 
-	```python
-	eval("1 + 2") # 3
-	```
+* __exec__ 用于执行一系列复杂语句。
 
-* __exec__
-
-	__exec__ 用于执行一系列复杂语句。
-
-	```python
-	code = """
-	def add(a, b):
-			return a + b
-	res = add(1, 2)
-	"""
-	exec(code)
-	print(res) # 3
-	```
+  ```python
+  code = """
+  def add(a, b):
+      return a + b
+  res = add(1, 2)
+  """
+  exec(code)
+  print(res) # 3
+  ```
 
 ### 动态执行代码的作用域
 
@@ -37,7 +33,7 @@ Python可以使用内置函数 `eval` 和 `exec` 来动态执行代码片段。
 ```python
 code = """
 def add(a, b):
-		return a + b
+    return a + b
 res = add(1, 2)
 """
 g = {}
@@ -57,7 +53,7 @@ eval(bin_expr) # 3
 
 code = """
 def add(a, b):
-		return a + b
+    return a + b
 res = add(1, 2)
 """
 bin_code = compile(code, "unknown.py", "exec")
