--- a/Python3专题笔记/动态执行代码.md
+++ b/Python3专题笔记/动态执行代码.md
@@ -8,7 +8,7 @@ Python代码只是字符串，对于已经写入到py文件中的代码，在读
 
 Python可以使用内置函数 `eval` 和 `exec` 来动态执行代码片段。
 
-* __eval__ 用于执行表达式，并返回值。
+* __eval__ 用于执行表达式，并返回表达式的结果。
 
   ```python
   eval("1 + 2") # 3
