--- a/Python3专题笔记/动态执行代码.md
+++ b/Python3专题笔记/动态执行代码.md
@@ -1,6 +1,10 @@
 动态执行代码
 ================================================================================
 
+__测试版本__：Python3.10.8
+
+--------------------------------------------------------------------------------
+
 Python代码只是字符串，对于已经写入到py文件中的代码，在读入脚本文件的时候自动编译为字节码；对于运行时动态生成的代码，可以在运行时动态编译运行。
 
 
