--- a/Python3专题笔记/一些性能优化的技巧.md
+++ b/Python3专题笔记/一些性能优化的技巧.md
@@ -75,7 +75,9 @@ timer(acc, 255, 510) # 7.98s
 
 ### 关闭GC
 
-对于部分会频繁触发垃圾回收的地方，比如循环引用，如果性能敏感的地方，可以尝试临时关闭GC，待执行完以后统一调用一次 `gc.collect()` 。
+对于部分会频繁触发垃圾回收的地方，比如循环引用，如果性能敏感的地方，可以尝试临时关闭GC。
+
+待执行完以后统一调用一次 `gc.collect()` 。
 
 ```python
 import time
