--- a/Python3专题笔记/一些性能优化的技巧.md
+++ b/Python3专题笔记/一些性能优化的技巧.md
@@ -174,16 +174,16 @@ def timer(func, *args, **kwargs):
 
 
 def test1(num):
-    values = [i for i in range(100000)]
-    list(map(lambda item: item * 2, values))
+    for i in range(num):
+        values = [i for i in range(20)]
 
 
 def test2(num):
-    values = (i for i in range(100000))
-    tuple(map(lambda item: item * 2, values))
+    for i in range(num):
+        values = (i for i in range(20))
 
-timer(test1, 100000) # 0.0110s
-timer(test2, 100000) # 0.0099s
+timer(test1, 100000) # 0.05s
+timer(test2, 100000) # 0.03s
 ```
 
 ### 减少重复计算的变量
