--- a/Python3专题笔记/一些性能优化的技巧.md
+++ b/Python3专题笔记/一些性能优化的技巧.md
@@ -155,7 +155,7 @@ timer(test2, 1000) # 0.39s
 
 ### 元组比列表快
 
-元组作为一种不可变的数据类型，速度大多数时候是比列表快的，不过快得也有限。
+元组作为一种不可变的数据类型，速度大多数时候是比列表快的，对于长度20以内的元组会快很多，对于太大的元组快得有限。
 
 ```python
 import time
