--- a/Python3专题笔记/创建常量类.md
+++ b/Python3专题笔记/创建常量类.md
@@ -7,7 +7,7 @@ __测试版本__：Python3.10.8
 
 Python中并没有常量的概念，比较优雅的方式就是实用元类来控制。
 
-类是元类的实例，通过在元类中重载 __写__ 数据的方法，拦截数据的二次覆盖实现。
+类是元类的实例，通过在元类中重载 __写__ 数据的方法，拦截数据的二次覆盖来实现。
 
 ```python
 import os
@@ -22,9 +22,6 @@ class ConstMeta(type):
 
     MAGIC_METHODS = ("_init",)
 
-    def __new__(cls, *args, **kwargs):
-        return super().__new__(cls, *args, **kwargs)
-
     def __init__(self, *args, **kwargs):
         vs = vars(self)
         for method in self.__class__.MAGIC_METHODS:
@@ -32,14 +29,23 @@ class ConstMeta(type):
                 getattr(self, method)()
 
     def __setattr__(self, key ,value):
+        """
+        拦截已有数据的二次覆盖。
+        """
         if key in self.__dict__:
             raise self.__class__.ConstError("Const value can't be overridden")
         super().__setattr__(key, value)
 
     def __getitem__(self, key):
+        """
+        实现类似字典通过键访问值的操作。
+        """
         return vars(self)[key]
 
     def __call__(self, *args, **kwargs):
+        """
+        禁止实例化。
+        """
         raise self.__class__.NotInstantiableError("Const type can't be instantiated")
 
     def __repr__(self):
@@ -53,7 +59,6 @@ class ConstMeta(type):
             filter(lambda item: (not item[0].startswith("__")) and
                                 (not item[0] in self.__class__.MAGIC_METHODS),
                    vars(self).items()))))
-
 
 if __name__ == "__main__":
     from collections import namedtuple
