--- a/Python3专题笔记/创建常量类.md
+++ b/Python3专题笔记/创建常量类.md
@@ -71,8 +71,9 @@ if __name__ == "__main__":
         def _init(cls):
             cls.PLATFORM = cls.PLATFORM_3DSMAX
             cls.VERSION = namedtuple("Version",
-                 ["major", "minor", "micro", "tag", "extra"]
-                 )(0, 0, 1, "release", "")
+                 ("major", "minor", "micro", "tag", "extra"),
+                 defaults=(1, 0, 0, "release", ""),
+                 )()
 
     print(Globals)
     print(Globals.VERSION)
