--- a/Python3专题笔记/列表视图.md
+++ b/Python3专题笔记/列表视图.md
@@ -1,6 +1,12 @@
 列表视图
 ================================================================================
 
+__测试版本__：Python3.10.8
+
+--------------------------------------------------------------------------------
+
+Python中没有指针的概念，如何才能获得一个列表的视图呢，可以使用一个自定义的类，重载其 `__getitem__` 和 `__setitem__` 方法。
+
 ```python
 class ListView:
 
