--- a/Python3专题笔记/动态加载模块.md
+++ b/Python3专题笔记/动态加载模块.md
@@ -18,13 +18,10 @@ print(sys.version_info)
 ```python
 import os
 import importlib.util
-from typing import Dict, Optional, no_type_check
-from types import ModuleType
 
-loaded_modules: Dict[str, ModuleType] = { }
+loaded_modules = { }
 
-@no_type_check
-def import_module(path: str, name: Optional[str] = None):
+def import_module(path, name = None):
     mod = None
     try:
         path = os.path.expanduser(path)
