--- a/Python3专题笔记/列表视图.md
+++ b/Python3专题笔记/列表视图.md
@@ -5,7 +5,11 @@ __测试版本__：Python3.10.8
 
 --------------------------------------------------------------------------------
 
-Python中没有指针的概念，如何才能获得一个列表的视图呢，可以使用一个自定义的类，重载其 `__getitem__` 和 `__setitem__` 方法。
+Python中没有指针的概念，如何才能获得一个列表的视图呢。
+
+一种方法是使用numpy数组，其切片不会自动生成一个新列表，而是获得原始列表的视图。
+
+另一种方法是使用一个自定义的类，重载其 `__getitem__` 和 `__setitem__` 方法。
 
 ```python
 class ListView:
