--- a/Python3专题笔记/列表视图.md
+++ b/Python3专题笔记/列表视图.md
@@ -91,14 +91,12 @@ class ListView:
 lst = [i for i in range(10)]
 
 # [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
-view1 = ListView(lst, step=2)
-# <ListView [0, 2, 4, 6, 8]>
+view1 = ListView(lst, step=2) # <ListView [0, 2, 4, 6, 8]>
 view1[::2] = list(map(lambda n: n ** 2, view1[::2]))
 print(view1)
 # <ListView [0, 2, 16, 6, 64]>
 
-view2 = ListView(lst, 2, -2)
-# [2, 3, 16, 5, 6, 7]
+view2 = ListView(lst, 2, -2) # [2, 3, 16, 5, 6, 7]
 view2[::2] = list(map(lambda n: n ** 2, view2[::2]))
 print(view2)
 # <ListView [4, 3, 256, 5, 36, 7]>
