--- a/Python3专题笔记/一些性能优化的技巧.md
+++ b/Python3专题笔记/一些性能优化的技巧.md
@@ -124,7 +124,6 @@ timer(withgc, 10000) # 0.0060s
 
 ```python
 import time
-import gc
 
 # 关闭GC减少干扰
 import gc
@@ -151,6 +150,45 @@ def test2(num):
 
 timer(test1, 1000) # 0.21s
 timer(test2, 1000) # 0.39s
+```
+
+### 生成器用时间换空间
+
+当你有一份庞大的数据要处理，可能计算机无法提供这么多的内存将其完全加载，那么合适的方法就是用利用生成器的惰性求值特性。
+
+惰性求值在需要的时候产生值，当然，其CPU性能会有所浪费，但是不用一次性加载全部数据。
+
+```python
+import time
+from memory_profiler import profile
+
+# 关闭GC减少干扰
+import gc
+gc.disable()
+
+def timer(func, *args, **kwargs):
+    beg = time.time()
+    res = func(*args, **kwargs)
+    end = time.time()
+    print(end - beg)
+    return res
+
+@profile
+def test_generator():
+    def gen():
+        for i in range(100000):
+            yield i
+    g = gen()
+    for i in g:
+        pass
+
+@profile
+def test_loop():
+    for i in range(100000):
+        pass
+
+timer(test_generator) # 9.08s
+timer(test_loop) # 3.59s
 ```
 
 ### 元组比列表快
