--- a/Python3专题笔记/一些性能优化的技巧.md
+++ b/Python3专题笔记/一些性能优化的技巧.md
@@ -45,7 +45,7 @@ timer(calc1) # 0.32s
 timer(calc2) # 0.27s
 ```
 
-### 减少数据生成
+### 减少新数据生成
 
 Python中的一切类型皆对象，即使是整数这种简单的类型也是对象，有自己的方法，所以一切数据都很“重”。
 
