--- a/Python3专题笔记/一些性能优化的技巧.md
+++ b/Python3专题笔记/一些性能优化的技巧.md
@@ -152,16 +152,16 @@ timer(test1, 1000) # 0.21s
 timer(test2, 1000) # 0.39s
 ```
 
-### 生成器用时间换空间
+### 生成器更省内存
 
 当你有一份庞大的数据要处理，可能计算机无法提供这么多的内存将其完全加载，那么合适的方法就是用利用生成器的惰性求值特性。
 
-惰性求值在需要的时候产生值，当然，其CPU性能会有所浪费，但是不用一次性加载全部数据。
+惰性求值在需要的时候产生值，有时候其CPU性能会有所浪费，但是不用一次性加载全部数据。一般来说，标准库itertools中的工具迭代器，比手写的迭代器执行效率要高很多，手写的迭代器大多数时候是慢于一次性产生大量数据的。
 
 ```python
 import time
+from itertools import cycle
 from memory_profiler import profile
-
 # 关闭GC减少干扰
 import gc
 gc.disable()
@@ -176,19 +176,23 @@ def timer(func, *args, **kwargs):
 @profile
 def test_generator():
     def gen():
-        for i in range(100000):
-            yield i
+        i = 0
+        data = cycle([i for i in range(128)])
+        while i < 10000:
+            yield next(data)
+            i += 1
     g = gen()
     for i in g:
-        pass
+        r = i + i
 
 @profile
 def test_loop():
-    for i in range(100000):
-        pass
+    data = [i for i in range(128)] * 10000
+    for i in data:
+        r = i + i
 
-timer(test_generator) # 9.08s
-timer(test_loop) # 3.59s
+timer(test_generator) # 1.27s
+timer(test_loop) # 46.78
 ```
 
 ### 元组比列表快
