--- a/Python3专题笔记/一些性能优化的技巧.md
+++ b/Python3专题笔记/一些性能优化的技巧.md
@@ -114,8 +114,8 @@ def withgc(n):
         a.b = b
         b.a = a
 
-timer(nogc,   10000) # 0.0029s
-timer(withgc, 10000) # 0.0060s
+timer(nogc,   10000) # 0.0029s, 0MB
+timer(withgc, 10000) # 0.0060s, 9.8MB
 ```
 
 ### 生成式比循环快
