--- a/Python3专题笔记/动态生成函数.md
+++ b/Python3专题笔记/动态生成函数.md
@@ -1,1 +1,21 @@
+动态生成函数
+================================================================================
 
+__测试版本__：Python3.10.8
+
+--------------------------------------------------------------------------------
+
+Python中动态生成函数可以使用 `lambda` 关键字。
+```python
+def func_gen(hint):
+    assert hint in ("-" , "+")
+    if hint == "-":
+        return lambda a, b: a - b
+    else:
+        return lambda a, b: a + b
+
+sub = func_gen(-)
+add = func_gen(+)
+sub(1, 2) # -1
+add(1, 2) # 3
+```
