--- a/Python3专题笔记/动态生成函数.md
+++ b/Python3专题笔记/动态生成函数.md
@@ -14,8 +14,8 @@ def func_gen(hint):
     else:
         return lambda a, b: a + b
 
-sub = func_gen(-)
-add = func_gen(+)
+sub = func_gen("-")
+add = func_gen("+")
 sub(1, 2) # -1
 add(1, 2) # 3
 ```
