--- a/Python3专题笔记/动态生成函数.md
+++ b/Python3专题笔记/动态生成函数.md
@@ -19,3 +19,17 @@ add = func_gen("+")
 sub(1, 2) # -1
 add(1, 2) # 3
 ```
+
+但是在循环中，可能大多数人会遇到这种错误。
+```python
+def func_gen(n):
+    res = []
+    for i in range(n):
+        res.append(lambda: n * n)
+    return res
+
+funcs = func_gen(3)
+for f in funcs:
+    print(f(), end=" ")
+# 9 9 9
+```
