--- a/Python3专题笔记/动态生成函数.md
+++ b/Python3专题笔记/动态生成函数.md
@@ -5,7 +5,8 @@ __测试版本__：Python3.10.8
 
 --------------------------------------------------------------------------------
 
-Python中动态生成函数可以使用 `lambda` 关键字。
+### Python中动态生成函数可以使用 `lambda` 关键字。
+
 ```python
 def func_gen(hint):
     assert hint in ("-" , "+")
@@ -20,7 +21,8 @@ sub(1, 2) # -1
 add(1, 2) # 3
 ```
 
-但是在循环中，可能大多数人会犯这种错误。
+### 循环动态生成函数的常见错误
+
 ```python
 # 错误代码
 
@@ -36,7 +38,7 @@ for f in funcs:
 # 4 4 4
 ```
 
-这是因为， `func_gen` 中的 `lambda` 绑定的是循环中的迭代变量 `i` ，函数执行完成后， `i` 停留在了 `2` 。
+并没有按预期打印出 `0 1 4` ，是因为 `func_gen` 中的 `lambda` 绑定的是循环中的迭代变量 `i` ，函数执行完成后， `i` 停留在了 `2` 。
 
 Python中的作用域分为三种：__global__ 、 __local__ 、 __nonlocal__。global永远不会结束生命周期。local是函数的形参和局部变量，离开函数后就结束生命周期。按照local的规则，函数内动态生成的函数应该访问不到 `i` 了才对，因为 `func_gen` 执行完毕后 `i` 就死亡了，但事实上 `i` 并没内有被放在local中，而是nonlocal。
 
