--- a/Python3专题笔记/动态生成函数.md
+++ b/Python3专题笔记/动态生成函数.md
@@ -44,9 +44,7 @@ Python中的作用域分为三种：__global__ 、 __local__ 、 __nonlocal__。
 
 ```mermaid
 graph LR
-A(global)
-B(local)
-C(nonlocal)
+A(global) B(local) C(nonlocal)
 ```
 
 Python在执行函数的过程中，为了加速局部变量的访问，会在栈帧中将局部变量、函数的参数放入叫 __fast__ 的块中，按索引快速访问，对应 __local__ 类型变量；将闭包将会引用到的变量放入 __deref__ 的块中，对应 __nonlocal__ 类型变量。当函数执行完毕后，fast内的内容宣布消亡，但deref会一直存在，以至于动态生成的函数依然能够访问到。
