--- a/Python3专题笔记/一些性能优化的技巧.md
+++ b/Python3专题笔记/一些性能优化的技巧.md
@@ -194,9 +194,7 @@ timer(test_loop) # 46.78, 9.8MB
 
 ### 海量实例使用 `__slot__` 省内存
 
-Python中可以使用 `__slot__` 属性指明类的属性列表，一旦指定了固定的属性列表，类就不能动态添加属性，同样也不能用于继承，可以用于一定的代码安全防护。
-
-但是 `__slot__` 更重要的机能在于节省内存，面对海量实例的时候，能够大幅度节省内存。
+Python中可以使用 `__slot__` 属性指明类的属性列表，一旦指定了固定的属性列表，类就不能动态添加属性，同样也不能用于继承，可以用于一定的代码安全防护。但是 `__slot__` 更重要的机能在于节省内存，面对海量实例的时候，能够大幅度节省内存。
 
 ```python
 from random import randint, choice
