--- a/Python3专题笔记/类型注解.md
+++ b/Python3专题笔记/类型注解.md
@@ -487,7 +487,7 @@ print(isinstance(stu, IPerson)) # True
 
 ### 类方法中注解类本身
 
-遇到在类的方法中使用类本身作为类型注解的时候，会引发类型不存在的错误，不仅静态检查无法通过，解释器执行的时候都会报错。可以使用 `"ClassName"` 来表示即将出现的类。
+遇到在类的方法中使用类本身作为类型注解的时候，会引发类型不存在的错误，不仅静态检查无法通过，解释器执行的时候都会报错，因为到类的代码执行完成之前，类还没真正诞生。可以使用 `"ClassName"` 来表示即将出现的类。
 
 _Python3.11在typing中提供了Self类型，用于表示类本身。_
 
@@ -498,6 +498,24 @@ class A:
 
     @classmethod
     def instance(cls) -> "A": # 如果用A而不是"A"的话会引发名称错误
+        if not cls.__instance:
+            cls.__instance = cls()
+        return cls.__instance
+
+a = A.instance()
+```
+
+也可以用 `from __future__ import annotations` 来假装类存在。
+
+```python
+from __future__ import annotations
+
+class A:
+
+    __instance = None
+
+    @classmethod
+    def instance(cls) -> A:
         if not cls.__instance:
             cls.__instance = cls()
         return cls.__instance
