--- a/Python3专题笔记/创建常量类.md
+++ b/Python3专题笔记/创建常量类.md
@@ -20,7 +20,8 @@ class ConstMeta(type):
 
     MAGIC_METHODS = ("_init",)
 
-    def __init__(self, *args, **kwargs):
+    def __init__(self, name, bases, meta):
+        super().__init__(name, bases, meta)
         vs = vars(self)
         for method in self.__class__.MAGIC_METHODS:
             if method in vs:
@@ -60,6 +61,7 @@ class ConstMeta(type):
 
 if __name__ == "__main__":
     from collections import namedtuple
+
     class Globals(metaclass=ConstMeta):
 
         PLATFORM_3DSMAX = "3dsmax"
