--- a/Python3专题笔记/类型注解.md
+++ b/Python3专题笔记/类型注解.md
@@ -7,7 +7,7 @@ __测试版本__：Python3.10.8
 
 ### 静态检查
 
-Python3的类型注解，并不影响运行，但是在使用mypy检查的时候会对不匹配的类型进行报错，及时发现可能得风险。
+Python3的类型注解，并不影响运行，但是在使用诸如mypy这类静态检查工具检查的时候会对不匹配的类型进行报错，及时发现可能的风险。
 
 ```python
 def add(a: int, b: int) -> int:
