--- a/Python3专题笔记/类型注解.md
+++ b/Python3专题笔记/类型注解.md
@@ -7,6 +7,8 @@ __测试版本__：Python3.10.8
 
 ### 静态检查
 
+在使用Python进行开发的时候，当项目扩张到一定程度，修改的代码就很难进行全量测试了，然而对于解释执行的脚本语言来说，很多错误都只能在运行的时候才能发现，非常浪费时间，不像编译型语言可以在编译期解决掉绝大多数问题。
+
 Python3的类型注解，并不影响运行，但是在使用诸如mypy这类静态检查工具检查的时候会对不匹配的类型进行报错，及时发现可能的风险。
 
 ```python
