--- a/Python3专题笔记/单例模式.md
+++ b/Python3专题笔记/单例模式.md
@@ -63,7 +63,7 @@ class Singleton(type):
             self.__instance = super(Singleton, self).__call__(*args, **kwargs)
         return self.__instance
 
-class QtSingleton(type(QObject), Singleton):pass
+class QtSingleton(type(QObject), Singleton):...
 
 class MyClass(QWidget):
 	
