--- a/Python3专题笔记/单例模式.md
+++ b/Python3专题笔记/单例模式.md
@@ -42,9 +42,9 @@ bar = Spam()
 print(b)
 ```
 
-### 但是在PySide（或QT）中想要使用单例，会有些不同
+### 实践中你可能会遇到元类冲突
 
-直接让一个继承自 `QWidget` 的类使用 `Singleton` 作为元类会产生元类冲突，因为 `QWidget` 的元类是 `Shiboken.ObjectType` ，但是 `Singleton` 的元类是 `Type` 。为了解决冲突，需要产生一个新的元类，这个元类同时继承自 `Shiboken.ObjectType` 和 `Singleton` ，然后就可以应用于 `QWidget` 作为合法的元类了。
+在PySide（或QT）中想要使用单例，直接让一个继承自 `QWidget` 的类使用 `Singleton` 作为元类会产生元类冲突，因为 `QWidget` 的元类是 `Shiboken.ObjectType` ，但是 `Singleton` 的元类是 `Type` 。为了解决冲突，需要产生一个新的元类，这个元类同时继承自 `Shiboken.ObjectType` 和 `Singleton` ，然后就可以应用于 `QWidget` 作为合法的元类了。
 
 _python2_
 ```python
