--- a/Python3专题笔记/手搓计算器.md
+++ b/Python3专题笔记/手搓计算器.md
@@ -108,7 +108,8 @@ class Parser:
         """
         expr = term ADD term
              | term SUB term
-             | term;
+             | term
+             ;
         """
         val = self.term()
         while self.accept(Token.Type.ADD) or self.accept(Token.Type.SUB):
@@ -121,7 +122,8 @@ class Parser:
         """
         expr = factor MUL factor
              | factor DIV factor
-             | factor;
+             | factor
+             ;
         """
         val = self.factor()
         while self.accept(Token.Type.MUL) or self.accept(Token.Type.DIV):
@@ -133,7 +135,8 @@ class Parser:
     def factor(self):
         """
         expr = NUM
-             | LPAREN expr RPAREN ;
+             | LPAREN expr RPAREN
+             ;
         """
         if self.accept(Token.Type.NUM):
             tok = self.current_token()
