--- a/Python3专题笔记/手搓计算器.md
+++ b/Python3专题笔记/手搓计算器.md
@@ -66,7 +66,7 @@ class Lexer:
             sttype, ttext = m.lastgroup, m.group()
             ttype = Token.Type[sttype]
             if ttype == Token.Type.ILLEGAL:
-                raise Exception(f"@ ERR -- Illegal character '{tokentext}'\n")
+                raise SyntaxError(f"Illegal character '{tokentext}'\n")
             mode = self.modes[ttype]
             func = mode.func
             tok = func(ttype, ttext)
