--- a/Python3专题笔记/编写一个递归下降分析器.md
+++ b/Python3专题笔记/编写一个递归下降分析器.md
@@ -5,7 +5,9 @@ __测试版本__：Python3.10.8
 
 --------------------------------------------------------------------------------
 
-Python标准库的 `re` 模块合理利用可以大幅度简化词法分析器和语法分析器的编写。
+### Python标准库的 `re` 模块合理利用可以大幅度简化词法分析器和语法分析器的编写。
+
+我们先来写一个普通的计算器。
 
 ```python
 import re
@@ -151,4 +153,137 @@ class Parser:
 lexer = Lexer()
 parser = Parser(lexer)
 print(parser.parse("(4 + 2 * (3 + 4)) / 3.14"))
+```
+
+再来写一个Lisp计算器
+
+```python
+import re
+from enum import auto
+from enum import Enum
+from operator import add, sub, mul, truediv
+from collections import OrderedDict
+from collections import namedtuple
+from functools import reduce
+
+class Token:
+
+    class Type(Enum):
+        NUM        = auto()
+        ADD        = auto()
+        SUB        = auto()
+        MUL        = auto()
+        DIV        = auto()
+        LPAREN     = auto()
+        RPAREN     = auto()
+        EOL        = auto()
+        WHITESPACE = auto()
+        ILLEGAL    = auto()
+
+    def __init__(self, ttype, tvalue):
+        self.ttype = ttype
+        self.tvalue = tvalue
+
+    def __repr__(self):
+        return f'Token {self.ttype:<24} {self.tvalue or ""}'
+
+class Lexer:
+
+    def __init__(self):
+        self.tokens = list()
+        self.modes = OrderedDict()
+        self.add_mode(Token.Type.NUM,        lambda ttype, ttext: Token(ttype, float(ttext)), r'\d+(\.\d+)?')
+        self.add_mode(Token.Type.ADD,        lambda ttype, ttext: Token(ttype, add),          r'\+')
+        self.add_mode(Token.Type.SUB,        lambda ttype, ttext: Token(ttype, sub),          r'\-')
+        self.add_mode(Token.Type.MUL,        lambda ttype, ttext: Token(ttype, mul),          r'\*')
+        self.add_mode(Token.Type.DIV,        lambda ttype, ttext: Token(ttype, truediv),      r'\/')
+        self.add_mode(Token.Type.LPAREN,     lambda ttype, ttext: Token(ttype, None),         r'\(')
+        self.add_mode(Token.Type.RPAREN,     lambda ttype, ttext: Token(ttype, None),         r'\)')
+        self.add_mode(Token.Type.EOL,        lambda ttype, ttext: Token(ttype, None),         r'\n')
+        self.add_mode(Token.Type.WHITESPACE, lambda ttype, ttext: None,                       r'[ \t]')
+        self.add_mode(Token.Type.ILLEGAL,    lambda ttype, ttext: None,                       r'.')
+
+    def add_mode(self, ttype, func, regexp):
+        modeinfo = namedtuple("modeinfo", "func regexp")
+        mi = modeinfo(func, f'(?P<{ttype.name}>{regexp})')
+        self.modes[ttype] = mi
+
+    def lex(self, code):
+        self.tokens.clear()
+        fullregexp = "|".join(tuple(map(lambda item: item.regexp, self.modes.values())))
+        fullpat = re.compile(fullregexp)
+        scanner = fullpat.scanner(code)
+        for m in iter(scanner.match, None):
+            sttype, ttext = m.lastgroup, m.group()
+            ttype = Token.Type[sttype]
+            if ttype == Token.Type.ILLEGAL:
+                raise SyntaxError(f"Illegal character '{tokentext}'\n")
+            mode = self.modes[ttype]
+            func = mode.func
+            tok = func(ttype, ttext)
+            if tok:
+                self.tokens.append(tok)
+
+class Parser:
+
+    def __init__(self, lexer):
+        self.lexer = lexer
+        self.cursor = -1
+
+    def advance(self, n=1):
+        self.cursor += n
+
+    def accept(self, *ttypes):
+        for idx, ttype in enumerate(ttypes, 1):
+            tok = self.next_token(idx)
+            if (not tok) or (tok.ttype != ttype):
+                return False
+        self.advance(len(ttypes))
+        return True
+
+    def current_token(self):
+        return self.lexer.tokens[self.cursor]
+
+    def next_token(self, idx=1):
+        targetidx = self.cursor + idx
+        if len(self.lexer.tokens) < targetidx + 1:
+            return None
+        return self.lexer.tokens[targetidx]
+
+    def parse(self, code):
+        self.cursor = -1
+        self.lexer.lex(code)
+        val = self.eval()
+        return val
+
+    def expr(self):
+        op = self.eval()
+        params = []
+        while not self.accept(Token.Type.RPAREN):
+            n = self.eval()
+            params.append(n)
+        if params:
+            val = reduce(op, params[1:], params[0])
+        else:
+            val = op()
+        return val
+
+    def eval(self):
+        if self.accept(Token.Type.NUM) or \
+           self.accept(Token.Type.ADD) or \
+           self.accept(Token.Type.SUB) or \
+           self.accept(Token.Type.MUL) or \
+           self.accept(Token.Type.DIV):
+            tok = self.current_token()
+            return tok.tvalue
+        if self.accept(Token.Type.LPAREN):
+            val = self.expr()
+            return val
+        raise SyntaxError("Expected number")
+
+lexer = Lexer()
+parser = Parser(lexer)
+print(parser.parse("3.0"))
+print(parser.parse("(+ 1 2 3)"))
+print(parser.parse("(* 2.0 (+ 1 2 3) (/ 9.0 3.0))"))
 ```
