--- a/Python3专题笔记/编写一个递归下降分析器.md
+++ b/Python3专题笔记/编写一个递归下降分析器.md
@@ -7,7 +7,7 @@ __测试版本__：Python3.10.8
 
 ### Python标准库的 `re` 模块合理利用可以大幅度简化词法分析器和语法分析器的编写。
 
-我们先来写一个普通的计算器。
+首先我们需要一个Lexer，进行词法拆分。
 
 ```python
 import re
@@ -74,7 +74,11 @@ class Lexer:
             tok = func(ttype, ttext)
             if tok:
                 self.tokens.append(tok)
+```
 
+接下来我们来写一个普通的计算器下降分析器。
+
+```python
 class Parser:
 
     def __init__(self, lexer):
@@ -155,75 +159,9 @@ parser = Parser(lexer)
 print(parser.parse("(4 + 2 * (3 + 4)) / 3.14"))
 ```
 
-再来写一个Lisp计算器
+再来写一个Lisp计算器，词法分析器还可以复用之前的。
 
 ```python
-import re
-from enum import auto
-from enum import Enum
-from operator import add, sub, mul, truediv
-from collections import OrderedDict
-from collections import namedtuple
-from functools import reduce
-
-class Token:
-
-    class Type(Enum):
-        NUM        = auto()
-        ADD        = auto()
-        SUB        = auto()
-        MUL        = auto()
-        DIV        = auto()
-        LPAREN     = auto()
-        RPAREN     = auto()
-        EOL        = auto()
-        WHITESPACE = auto()
-        ILLEGAL    = auto()
-
-    def __init__(self, ttype, tvalue):
-        self.ttype = ttype
-        self.tvalue = tvalue
-
-    def __repr__(self):
-        return f'Token {self.ttype:<24} {self.tvalue or ""}'
-
-class Lexer:
-
-    def __init__(self):
-        self.tokens = list()
-        self.modes = OrderedDict()
-        self.add_mode(Token.Type.NUM,        lambda ttype, ttext: Token(ttype, float(ttext)), r'\d+(\.\d+)?')
-        self.add_mode(Token.Type.ADD,        lambda ttype, ttext: Token(ttype, add),          r'\+')
-        self.add_mode(Token.Type.SUB,        lambda ttype, ttext: Token(ttype, sub),          r'\-')
-        self.add_mode(Token.Type.MUL,        lambda ttype, ttext: Token(ttype, mul),          r'\*')
-        self.add_mode(Token.Type.DIV,        lambda ttype, ttext: Token(ttype, truediv),      r'\/')
-        self.add_mode(Token.Type.LPAREN,     lambda ttype, ttext: Token(ttype, None),         r'\(')
-        self.add_mode(Token.Type.RPAREN,     lambda ttype, ttext: Token(ttype, None),         r'\)')
-        self.add_mode(Token.Type.EOL,        lambda ttype, ttext: Token(ttype, None),         r'\n')
-        self.add_mode(Token.Type.WHITESPACE, lambda ttype, ttext: None,                       r'[ \t]')
-        self.add_mode(Token.Type.ILLEGAL,    lambda ttype, ttext: None,                       r'.')
-
-    def add_mode(self, ttype, func, regexp):
-        modeinfo = namedtuple("modeinfo", "func regexp")
-        mi = modeinfo(func, f'(?P<{ttype.name}>{regexp})')
-        self.modes[ttype] = mi
-
-    def lex(self, code):
-        self.tokens.clear()
-        fullregexp = "|".join(tuple(map(lambda item: item.regexp, self.modes.values())))
-        fullpat = re.compile(fullregexp)
-        scanner = fullpat.scanner(code)
-        for m in iter(scanner.match, None):
-            sttype, ttext = m.lastgroup, m.group()
-            ttype = Token.Type[sttype]
-            if ttype == Token.Type.ILLEGAL:
-                raise SyntaxError(f"Illegal character '{tokentext}'\n")
-            mode = self.modes[ttype]
-            func = mode.func
-            tok = func(ttype, ttext)
-            if tok:
-                self.tokens.append(tok)
-
 class Parser:
 
     def __init__(self, lexer):
