--- a/Python3专题笔记/编写一个递归下降分析器.md
+++ b/Python3专题笔记/编写一个递归下降分析器.md
@@ -5,9 +5,9 @@ __测试版本__：Python3.10.8
 
 --------------------------------------------------------------------------------
 
-### Python标准库的 `re` 模块合理利用可以大幅度简化词法分析器和语法分析器的编写。
+Python标准库的 `re` 模块合理利用可以大幅度简化词法分析器和语法分析器的编写。
 
-首先我们需要一个Lexer，进行词法拆分。
+### 首先我们需要一个Lexer，进行词法拆分
 
 ```python
 import re
@@ -76,7 +76,7 @@ class Lexer:
                 self.tokens.append(tok)
 ```
 
-接下来我们来写一个普通的计算器。
+### 接下来我们来写一个普通的计算器
 
 ```python
 class Parser:
@@ -159,7 +159,7 @@ parser = Parser(lexer)
 print(parser.parse("(4 + 2 * (3 + 4)) / 3.14"))
 ```
 
-再来写一个Lisp计算器，词法分析器还可以复用之前的。
+### 再来写一个Lisp计算器，词法分析器还可以复用之前的
 
 ```python
 class Parser:
