--- a/Python3专题笔记/编写一个递归下降分析器.md
+++ b/Python3专题笔记/编写一个递归下降分析器.md
@@ -162,6 +162,8 @@ print(parser.parse("(4 + 2 * (3 + 4)) / 3.14"))
 ### 再来写一个Lisp计算器，词法分析器还可以复用之前的
 
 ```python
+from functools import reduce
+
 class Parser:
 
     def __init__(self, lexer):
