更新文档分类

--- a/Python进阶技巧/编写一个递归下降分析器.md
+++ b/Python进阶技巧/编写一个递归下降分析器.md
@@ -5,9 +5,11 @@ __测试版本__：Python3.10.8
 
 --------------------------------------------------------------------------------
 
-Python标准库的 `re` 模块合理利用可以大幅度简化词法分析器和语法分析器的编写。
+我们来尝试编写一个编译原理课程的基础作业：计算器。
 
 ### 首先我们需要一个Lexer，进行词法拆分
+
+Python标准库的 `re` 模块合理利用可以大幅度简化词法分析器和语法分析器的编写。
 
 ```python
 import re
