--- a/Python进阶技巧/设计模式/工厂模式.md
+++ b/Python进阶技巧/设计模式/工厂模式.md
@@ -36,3 +36,37 @@ def create_info(name, age):
 man = create_info("Guido", 70)
 # man = Info("Guido", 70) # Error
 ```
+
+还有一种更加优雅的方式：使用元类。
+
+```python
+class Factory(type):
+
+    class NotDirectlyInstantiableError(Exception):...
+
+    def __init__(self, name, bases, meta):
+        if "create" in meta:
+            raise AttributeError(
+                f"Class {self.__name__} should not implement method "
+                f"named 'create', it's a magic method for create"
+            )
+        self.create = classmethod(self.__class__.__factory)
+
+    def __call__(self, *args, **kwargs):
+        raise self.__class__.NotDirectlyInstantiableError(
+            f"Class {self.__name__} is not directly instantiable, "
+            f"please use {self.__name__}.create to instantiate"
+        )
+
+    def __factory(cls, *args, **kwargs):
+        instance = cls.__new__(cls, *args, **kwargs)
+        instance.__init__(*args, **kwargs)
+        return instance
+
+class YourClass(metaclass=Factory):
+
+    def __init__(self, arg1, arg2, arg3):
+       print("YourClass is instantiated")
+
+yc = YourClass.create()
+```
