--- a/Python进阶技巧/设计模式/工厂模式.md
+++ b/Python进阶技巧/设计模式/工厂模式.md
@@ -63,10 +63,11 @@ class Factory(type):
         instance.__init__(*args, **kwargs)
         return instance
 
-class YourClass(metaclass=Factory):
-
-    def __init__(self, arg1, arg2, arg3):
-       print("YourClass is instantiated")
-
-yc = YourClass.create()
+if __name__ == "__main__":
+    class YourClass(metaclass=Factory):
+    
+        def __init__(self, arg1, arg2, arg3):
+           print(f"YourClass is instantiated: {arg1} {arg2} {arg3}")
+    
+    yc = YourClass.create(1, 2, 3)
 ```
