--- a/Python进阶技巧/设计模式/单例模式.md
+++ b/Python进阶技巧/设计模式/单例模式.md
@@ -16,16 +16,15 @@ __测试版本__：Python3.10.8
 ```python
 class Singleton(type):
 
-    def __init__(self, *args, **kwargs):
-        super().__init__(*args, **kwargs)
-        # type.__init__(self, *args, **kwargs)
-        self.__instance = None
+    def __new__(cls, name, bases, meta):
+        meta["__call__"] = lambda self: self
+        return super().__new__(cls, name, bases, meta)
 
     def __call__(self, *args, **kwargs):
-        if self.__instance is None:
-            self.__instance = super().__call__(*args, **kwargs)
-            # self.__instance = type.__call__(self, *args, **kwargs)
-        return self.__instance
+        if not hasattr(self, "instance"):
+            self.instance = super().__call__(*args, **kwargs)
+            self.instance.__call__ = lambda: self.instance
+        return self.instance
 
 class Spam(metaclass=Singleton):
 
@@ -37,9 +36,9 @@ class Spam(metaclass=Singleton):
         return f"<Spam {self.name} {self.age}>"
 
 foo = Spam("Foo", 28)
-print(a)
+print(foo)
 bar = Spam()
-print(b)
+print(bar)
 ```
 
 ### 实践中你可能会遇到元类冲突
@@ -54,23 +53,24 @@ from PySide2.QtGui import *
 
 class Singleton(type):
 
-    def __init__(self, *args, **kwargs):
-        super(Singleton, self).__init__(*args, **kwargs)
-        self.__instance = None
+    def __new__(cls, name, bases, meta):
+        meta["__call__"] = lambda self: self
+        return super().__new__(cls, name, bases, meta)
 
     def __call__(self, *args, **kwargs):
-        if not self.__instance:
-            self.__instance = super(Singleton, self).__call__(*args, **kwargs)
-        return self.__instance
+        if not hasattr(self, "instance"):
+            self.instance = super().__call__(*args, **kwargs)
+            self.instance.__call__ = lambda: self.instance
+        return self.instance
 
 class QtSingleton(type(QObject), Singleton):...
 
-class MyClass(QWidget):
+class YourClass(QWidget):
 	
     __metaclass__ = QtSingleton
 	
     def __init__(self):
-        print("MyClass singleton created")
+        print("YourClass singleton created")
 ```
 
 _python3_
@@ -81,21 +81,22 @@ from PySide2.QtGui import *
 
 class Singleton(type):
 
-    def __init__(self, *args, **kwargs):
-        super().__init__(*args, **kwargs)
-        self.__instance = None
+    def __new__(cls, name, bases, meta):
+        meta["__call__"] = lambda self: self
+        return super().__new__(cls, name, bases, meta)
 
     def __call__(self, *args, **kwargs):
-        if not self.__instance:
-            self.__instance = super().__call__(*args, **kwargs)
-        return self.__instance
+        if not hasattr(self, "instance"):
+            self.instance = super().__call__(*args, **kwargs)
+            self.instance.__call__ = lambda: self.instance
+        return self.instance
 
 class QtSingleton(type(QObject), Singleton):...
 
-class MyClass(QWidget, metaclass=QtSingleton):
+class YourClass(QWidget, metaclass=QtSingleton):
 
     def __init__(self):
-        print("MyClass singleton created")
+        print("YourClass singleton created")
 ```
 
 ### 创建单例还可以使用装饰器实现
@@ -128,4 +129,41 @@ foo = Spam("Foo", 28)
 print(foo)
 bar = Spam()
 print(bar)
+```
+
+### 还有一种在定义的时候就被立即实例化的单例元类
+
+这种元类更像是“编译”期被初始化的一般。
+
+定义的时候立即初始化，有一个好处就是可以不用手动去调用进行初始化了，代码更加纯粹。
+
+但坏处就是需要注意相关依赖项的定义时机了。
+
+```python
+class Singleton(type):
+
+    class NotCompletelyInstantiatedError(Exception):...
+
+    def __new__(cls, name, bases, meta):
+        meta["__call__"] = lambda self: self
+        return super().__new__(cls, name, bases, meta)
+
+    def __call__(self, *args, **kwargs):
+        if not hasattr(self, "instance"):
+            self.instance = super().__call__(*args, **kwargs)
+            self.instance.__call__ = lambda: self.instance
+        return self.instance
+
+class SingletonWithInstance(Singleton):
+
+    def __init__(self, name, bases, meta):
+        super().__init__(name, bases, meta)
+        self.instance = super().__call__()
+
+if __name__ == "__main__":
+
+    class YourClass(metaclass=SingletonWithInstance):
+
+        def __init__(self):
+            print("Your class is instantiated")
 ```
