--- a/Python进阶技巧/设计模式/单例模式.md
+++ b/Python进阶技巧/设计模式/单例模式.md
@@ -47,6 +47,8 @@ print(bar)
 
 _python2_
 ```python
+# 为了给一些正在用Python2给3DsMax或Maya旧版本编写插件的小伙伴提供帮助，此处附带一下Python2的代码
+
 from PySide2.QtWidgets import *
 from PySide2.QtCore import *
 from PySide2.QtGui import *
