--- a/Python进阶技巧/类型注解.md
+++ b/Python进阶技巧/类型注解.md
@@ -489,7 +489,7 @@ print(isinstance(stu, IPerson)) # True
 
 ### 类方法中注解类本身
 
-遇到在类的方法中使用类本身作为类型注解的时候，会引发类型不存在的错误，不仅静态检查无法通过，解释器执行的时候都会报错，因为到类的代码执行完成之前，类还没真正诞生。可以使用 `"ClassName"` 来表示即将出现的类。
+遇到在类的方法中使用类本身作为类型注解的时候，或者类与类的循环依赖，会引发类型不存在的错误，不仅静态检查无法通过，解释器执行的时候都会报错，因为到类的代码执行完成之前，类还没真正诞生。可以使用 `"ClassName"` 来表示即将出现的类。
 
 _Python3.11在typing中提供了Self类型，用于表示类本身。_
 
@@ -507,27 +507,7 @@ class A:
 a = A.instance()
 ```
 
-也可以用 `from __future__ import annotations` 来假装类存在。
-
-```python
-from __future__ import annotations
-
-class A:
-
-    __instance = None
-
-    @classmethod
-    def instance(cls) -> A:
-        if not cls.__instance:
-            cls.__instance = cls()
-        return cls.__instance
-
-a = A.instance()
-```
-
-### 循环依赖注解
-
-遇到类型A的方法依赖类型B，类型B的方法依赖类型A，可以用 `"ClassName"` 直接当做类型注解。
+遇到类型A的方法依赖类型B，类型B的方法依赖类型A，也是一样的处理方式。
 
 ```python
 from typing import Set
@@ -560,6 +540,24 @@ client2: Client = Client(2)
 client1.connect(server)
 client2.connect(server)
 print(server.clients())
+```
+
+Python3.7以后，也可以用 `from __future__ import annotations` 来假装类存在。
+
+```python
+from __future__ import annotations
+
+class A:
+
+    __instance = None
+
+    @classmethod
+    def instance(cls) -> A:
+        if not cls.__instance:
+            cls.__instance = cls()
+        return cls.__instance
+
+a = A.instance()
 ```
 
 ### 临时关闭检查
