--- a/Python进阶技巧/类型注解.md
+++ b/Python进阶技巧/类型注解.md
@@ -489,7 +489,11 @@ print(isinstance(stu, IPerson)) # True
 
 ### 类方法中注解类本身
 
-遇到在类的方法中使用类本身作为类型注解的时候，或者类与类的循环依赖，会引发类型不存在的错误，不仅静态检查无法通过，解释器执行的时候都会报错，因为到类的代码执行完成之前，类还没真正诞生。可以使用 `"ClassName"` 来表示即将出现的类。
+遇到在类的方法中使用类本身作为类型注解，或者类与类的循环依赖，会引发类型不存在的错误，不仅静态检查无法通过，解释器执行的时候都会报错，因为到类的代码执行完成之前，类还没真正诞生。
+
+__这种行为叫做forward-referencing__。
+
+可以使用 `"ClassName"` 来表示即将出现的类。
 
 _Python3.11在typing中提供了Self类型，用于表示类本身。_
 
@@ -507,7 +511,7 @@ class A:
 a = A.instance()
 ```
 
-遇到类型A的方法依赖类型B，类型B的方法依赖类型A，也是一样的处理方式。
+遇到循环依赖的情况，也是一样的处理方式。
 
 ```python
 from typing import Set
