--- a/Python进阶技巧/类型注解.md
+++ b/Python进阶技巧/类型注解.md
@@ -491,7 +491,7 @@ print(isinstance(stu, IPerson)) # True
 
 遇到在类的方法中使用类本身作为类型注解，或者类与类的循环依赖，会引发类型不存在的错误，不仅静态检查无法通过，解释器执行的时候都会报错，因为到类的代码执行完成之前，类还没真正诞生。
 
-__这种行为叫做forward-referencing__。
+这种行为叫做 __forward-referencing__ 。
 
 可以使用 `"ClassName"` 来表示即将出现的类。
 
