--- a/Python进阶技巧/类型注解.md
+++ b/Python进阶技巧/类型注解.md
@@ -493,9 +493,7 @@ print(isinstance(stu, IPerson)) # True
 
 这种行为叫做 __forward-referencing__ 。
 
-可以使用 `"ClassName"` 来表示即将出现的类。
-
-_Python3.11在typing中提供了Self类型，用于表示类本身。_
+Python3.11在typing中提供了 `Self` 类型，用于表示类本身，低版本可以使用 `"ClassName"` 来表示即将出现的类。。
 
 ```python
 class A:
