--- a/Python进阶技巧/设计模式/单例模式.md
+++ b/Python进阶技巧/设计模式/单例模式.md
@@ -9,9 +9,9 @@ __测试版本__：Python3.10.8
 
 先明确一个概念：所有的元类都继承自 `type` ，所有的普通类都是元类的实例。
 
-元类在定义普通类的时候就会被调用，并产生一个元类实例。
+普通类定义的完成，意味着其元类完成了一次实例化。
 
-元类实例（普通类）在使用 `()` 调用的时候，传入的self就是普通类， `type.__call__(Class, *args)` ，进而产生一个普通类实例。
+元类实例（普通类）在使用 `()` 调用的时候，其元类的 `__call__` 方法传入的self就是普通类， `MetaClass.__call__(Class, *args)` ，进而产生一个普通类实例。
 
 ```python
 class Singleton(type):
