--- a/Python进阶技巧/设计模式/单例模式.md
+++ b/Python进阶技巧/设计模式/单例模式.md
@@ -11,7 +11,7 @@ __测试版本__：Python3.10.8
 
 普通类定义的完成，意味着其元类完成了一次实例化。
 
-元类实例（普通类）在使用 `()` 调用的时候，其元类的 `__call__` 方法传入的self就是普通类， `MetaClass.__call__(Class, *args)` ，进而产生一个普通类实例。
+普通类使用 `()` 进行实例化，我们知道类的 `__call__` 方法为其实例也提供了 `()` 调用的可能，所以普通类的实例化就是调用元类的 `__call__` 方法。
 
 ```python
 class Singleton(type):
