--- a/Python进阶技巧/设计模式/单例模式.md
+++ b/Python进阶技巧/设计模式/单例模式.md
@@ -1,10 +1,6 @@
 单例模式
 ================================================================================
 
-__测试版本__：Python3.10.8
-
---------------------------------------------------------------------------------
-
 ### 可以使用元类来实现
 
 先明确一个概念：所有的元类都继承自 `type` ，所有的普通类都是元类的实例。
@@ -14,6 +10,8 @@ __测试版本__：Python3.10.8
 普通类使用 `()` 进行实例化，我们知道类的 `__call__` 方法为其实例也提供了 `()` 调用的可能，所以普通类的实例化就是调用元类的 `__call__` 方法。
 
 ```python
+# 测试版本：Python3.10.8
+
 class Singleton(type):
 
     def __new__(cls, name, bases, meta):
@@ -35,10 +33,11 @@ class Spam(metaclass=Singleton):
     def __repr__(self):
         return f"<Spam {self.name} {self.age}>"
 
-foo = Spam("Foo", 28)
-print(foo)
-bar = Spam()
-print(bar)
+if __name__ == "__main__":
+    foo = Spam("Foo", 28)
+    print(foo)
+    bar = Spam()
+    print(bar)
 ```
 
 ### 实践中你可能会遇到元类冲突
@@ -46,6 +45,8 @@ print(bar)
 在PySide（或QT）中想要使用单例，直接让一个继承自 `QWidget` 的类使用 `Singleton` 作为元类会产生元类冲突，因为 `QWidget` 的元类是 `Shiboken.ObjectType` ，但是 `Singleton` 的元类是 `Type` 。为了解决冲突，需要产生一个新的元类，这个元类同时继承自 `Shiboken.ObjectType` 和 `Singleton` ，然后就可以应用于 `QWidget` 作为合法的元类了。
 
 ```python
+# 测试版本：Python3.10.8
+
 from PySide2.QtWidgets import *
 from PySide2.QtCore import *
 from PySide2.QtGui import *
@@ -64,10 +65,15 @@ class Singleton(type):
 
 class QtSingleton(type(QObject), Singleton):...
 
-class YourClass(QWidget, metaclass=QtSingleton):
+if __name__ == "__main__":
+    class YourClass(QWidget, metaclass=QtSingleton):
+    
+        def __init__(self):
+            print("YourClass singleton created")
 
-    def __init__(self):
-        print("YourClass singleton created")
+    yc1 = YourClass()
+    yc2 = YourClass()
+    print(yc1 == yc2)
 ```
 
 ### 创建单例还可以使用装饰器实现
@@ -75,6 +81,8 @@ class YourClass(QWidget, metaclass=QtSingleton):
 使用装饰器实现的单例，可以拥有更低的耦合度，也不会遭遇元类冲突等诸多问题，但是会导致类的名称变成一个函数对象。
 
 ```python
+# 测试版本：Python3.10.8
+
 import abc
 
 def Singleton(cls):
@@ -96,10 +104,11 @@ class Spam:
     def __repr__(self):
         return f"<Spam {self.name} {self.age}>"
 
-foo = Spam("Foo", 28)
-print(foo)
-bar = Spam()
-print(bar)
+if __name__ == "__main__":
+    foo = Spam("Foo", 28)
+    print(foo)
+    bar = Spam()
+    print(bar)
 ```
 
 ### 还有一种在定义的时候就被立即实例化的单例元类
@@ -111,6 +120,8 @@ print(bar)
 但坏处就是需要注意相关依赖项的定义时机了。
 
 ```python
+# 测试版本：Python3.10.8
+
 class Singleton(type):
 
     class NotCompletelyInstantiatedError(Exception):...
