--- a/Python进阶技巧/设计模式/单例模式.md
+++ b/Python进阶技巧/设计模式/单例模式.md
@@ -24,20 +24,11 @@ class Singleton(type):
             self.instance.__call__ = lambda: self.instance
         return self.instance
 
-class Spam(metaclass=Singleton):
-
-    def __init__(self, name, age):
-        self.name = name
-        self.age = age
-
-    def __repr__(self):
-        return f"<Spam {self.name} {self.age}>"
-
 if __name__ == "__main__":
-    foo = Spam("Foo", 28)
-    print(foo)
-    bar = Spam()
-    print(bar)
+    class YourClass(metaclass=Singleton): ...
+    yc1 = YourClass()
+    yc2 = YourClass()
+    print(yc1 == yc2)
 ```
 
 ### 实践中你可能会遇到元类冲突
